--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+colorlog==6.9.0
+homeassistant==2024.11.0
+pip>=21.3.1
+ruff==0.9.1
 websocket-client==1.8.0 
+websockets
 loguru==0.7.2
-homeassistant
