--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   ruff:
-    name: "Ruff"
+    name: "Black"
     runs-on: "ubuntu-latest"
     steps:
         - name: "Checkout the repository"
@@ -26,7 +26,4 @@ jobs:
           run: python3 -m pip install -r requirements.txt
 
         - name: "Lint"
-          run: python3 -m ruff check .
-
-        - name: "Format"
-          run: python3 -m ruff format . --check
+          run: python3 -m black . --check
