--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,5 +1,4 @@
 name: "Lint"
-
 on:
   push:
     branches:
@@ -7,23 +6,21 @@ on:
   pull_request:
     branches:
       - "main"
-
 jobs:
   ruff:
-    name: "Black"
+    name: "Ruff"
     runs-on: "ubuntu-latest"
     steps:
         - name: "Checkout the repository"
           uses: "actions/checkout@v4.2.2"
-
         - name: "Set up Python"
-          uses: actions/setup-python@v5.4.0
+          uses: actions/setup-python@v5.3.0
           with:
             python-version: "3.12"
             cache: "pip"
-
         - name: "Install requirements"
           run: python3 -m pip install -r requirements.txt
-
         - name: "Lint"
-          run: python3 -m black . --check
+          run: python3 -m ruff check .
+        - name: "Format"
+          run: python3 -m ruff format . --check
