--- a/custom_components/elegoo_printer/manifest.json
+++ b/custom_components/elegoo_printer/manifest.json
@@ -4,7 +4,7 @@
   "codeowners": ["@danielcherubini"],
   "config_flow": true,
   "documentation": "https://github.com/danielcherubini/elegoo-homeassistant",
-  "iot_class": "cloud_polling",
+  "iot_class": "local_polling",
   "issue_tracker": "https://github.com/danielcherubini/elegoo-homeassistant/issues",
   "version": "0.3.2"
 }
