--- a/.github/workflows/gemini.yaml
+++ b/.github/workflows/gemini.yaml
@@ -40,4 +40,6 @@ jobs:
           pull_request_diff: |-
             ${{ steps.get_diff.outputs.pull_request_diff }}
           pull_request_chunk_size: "3500"
+          extra_prompt: |-
+            Always reply in english!
           log_level: "DEBUG"
