adding V back in

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const version = core.getInput('version');
-            const tag = `${version}`;
+            const tag = `v${version}`; // Prefix with 'v' if needed
             try {
               await github.rest.git.createTag({
                 owner: context.repo.owner,
@@ -59,7 +59,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const version = core.getInput('version');
-            const tag = `${version}`;
+            const tag = `v${version}`;
             // You can customize the release notes generation here.
             // Example:  A simple release notes generator:
             let releaseNotes = `## Release ${tag}\n\n`;
@@ -74,6 +74,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: v${{ steps.get_version.outputs.version }}
-          release_name: Release ${{ steps.get_version.outputs.version }}
+          release_name: Release v${{ steps.get_version.outputs.version }}
           body: ${{ steps.generate_release_notes.outputs.release_notes }}
-          draft: true
+          draft: false # Set to true for a draft release
