--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,10 +1,10 @@
 {
   "name": "danielcherubini/elegoo_printer",
-  "image": "mcr.microsoft.com/devcontainers/python:3.12",
+  "image": "mcr.microsoft.com/devcontainers/python:3.13",
   "postCreateCommand": "scripts/setup",
   "forwardPorts": [8123],
   "remoteEnv": {
-    "DEBUG": "true"
+    "DEBUG": "false"
   },
   "portsAttributes": {
     "8123": {
