--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -2,7 +2,9 @@
   "name": "danielcherubini/elegoo_printer",
   "image": "mcr.microsoft.com/devcontainers/python:3.13",
   "postCreateCommand": "make setup",
-  "forwardPorts": [8123],
+  "forwardPorts": [
+    8123
+  ],
   "remoteEnv": {
     "DEBUG": "false"
   },
@@ -40,7 +42,12 @@
   "remoteUser": "vscode",
   "features": {
     "ghcr.io/devcontainers-extra/features/apt-packages:1": {
-      "packages": ["ffmpeg", "libturbojpeg0", "libpcap-dev"]
-    }
+      "packages": [
+        "ffmpeg",
+        "libturbojpeg0",
+        "libpcap-dev"
+      ]
+    },
+    "ghcr.io/va-h/devcontainers-features/uv": {}
   }
 }
