--- a/custom_components/elegoo_printer/manifest.json
+++ b/custom_components/elegoo_printer/manifest.json
@@ -1,10 +1,12 @@
 {
   "domain": "elegoo_printer",
   "name": "Elegoo Printer",
-  "codeowners": ["@danielcherubini"],
+  "codeowners": [
+    "@danielcherubini"
+  ],
   "config_flow": true,
   "documentation": "https://github.com/danielcherubini/elegoo-homeassistant",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/danielcherubini/elegoo-homeassistant/issues",
-  "version": "0.6.0"
+  "version": "0.7.0"
 }
