--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -30,6 +30,6 @@ jobs:
           uses: "actions/checkout@v4"
 
         - name: "Run HACS validation"
-          uses: "hacs/action@main"
+          uses: "hacs/action@2.0.4"
           with:
             category: "integration"
