--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -5,7 +5,7 @@
   "forwardPorts": [8123],
   "remoteEnv": {
     "DEBUG": "false"
-    "VENV": "dev",
+    "VENV": ".dev",
   },
   "portsAttributes": {
     "8123": {
