--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,6 +1,9 @@
 {
   "name": "danielcherubini/elegoo_printer",
   "image": "mcr.microsoft.com/devcontainers/python:3.13",
+  "runArgs": [
+    "--network=host"
+  ],
   "postCreateCommand": "make setup",
   "forwardPorts": [
     8123
