removing host networking from devcontainer

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,13 +1,8 @@
 {
   "name": "danielcherubini/elegoo_printer",
   "image": "mcr.microsoft.com/devcontainers/python:3.13",
-  "runArgs": [
-    "--network=host"
-  ],
   "postCreateCommand": "make setup",
-  "forwardPorts": [
-    8123
-  ],
+  "forwardPorts": [8123],
   "remoteEnv": {
     "DEBUG": "false",
     "VENV": ".dev",
@@ -47,11 +42,8 @@
   "remoteUser": "vscode",
   "features": {
     "ghcr.io/devcontainers-extra/features/apt-packages:1": {
-      "packages": [
-        "ffmpeg",
-        "libturbojpeg0",
-        "libpcap-dev"
-      ]
+      "packages": ["ffmpeg", "libturbojpeg0", "libpcap-dev"]
     }
   }
 }
+
