--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,14 @@ dependencies = [
     "websockets>=15.0.1",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.4.0",
+]
+
+[tool.setuptools.packages.find]
+include = ["custom_components*"]
+
 [tool.ruff]
 target-version = "py313"
 [lint]
