--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,10 @@ dependencies = [
     "websockets>=15.0.1",
 ]
 
-[project.optional-dependencies]
+[dependency-groups]
 dev = [
-    "pytest>=8.4.0",
+    "pytest>=8.4.1",
 ]
-
-[tool.setuptools.packages.find]
-include = ["custom_components*"]
-
 [tool.ruff]
 target-version = "py313"
 [lint]
@@ -39,3 +35,9 @@ fixture-parentheses = false
 keep-runtime-typing = true
 [mccabe]
 max-complexity = 25
+
+[tool.pytest.ini_options]
+pythonpath = [
+  "."
+]
+
