Feature/better onboarding (#120)
* Better Onboarding for adding printers

* updated translation files

* ruff

* updated list of printer types

* changes

* updating debug.py

* removing host networking from devcontainer

* 📝 Add docstrings to `feature/better_onboarding` (#121)

Docstrings generation was requested by @danielcherubini.

* https://github.com/danielcherubini/elegoo-homeassistant/pull/120#issuecomment-3024027300

The following files were modified:

* `custom_components/elegoo_printer/__init__.py`
* `custom_components/elegoo_printer/api.py`
* `custom_components/elegoo_printer/camera.py`
* `custom_components/elegoo_printer/config_flow.py`
* `custom_components/elegoo_printer/elegoo_sdcp/client.py`
* `custom_components/elegoo_printer/elegoo_sdcp/models/enums.py`
* `custom_components/elegoo_printer/elegoo_sdcp/models/printer.py`
* `custom_components/elegoo_printer/light.py`
* `custom_components/elegoo_printer/sensor.py`
* `debug.py`

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* ruff

* removing locked from makefile

* updating makefile

* added tests

* fixing linting

* fixes testrunner

* explicityl setting the printertype resin

* updated debug and devcontainer

* Changed this to be more exact on model names, and adds more tests

* fixing formatting

* lots of fixes

* fixed the config issue!

* one final issue

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -2,9 +2,7 @@
   "name": "danielcherubini/elegoo_printer",
   "image": "mcr.microsoft.com/devcontainers/python:3.13",
   "postCreateCommand": "make setup",
-  "forwardPorts": [
-    8123
-  ],
+  "forwardPorts": [8123, 3000, 3030, 3031],
   "remoteEnv": {
     "DEBUG": "false",
     "VENV": ".dev",
@@ -44,11 +42,7 @@
   "remoteUser": "vscode",
   "features": {
     "ghcr.io/devcontainers-extra/features/apt-packages:1": {
-      "packages": [
-        "ffmpeg",
-        "libturbojpeg0",
-        "libpcap-dev"
-      ]
+      "packages": ["ffmpeg", "libturbojpeg0", "libpcap-dev"]
     }
   }
 }
