--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "1.4.11"
 requires-python = ">=3.13"
 description = "Home Assistant Addon for Elegoo Printers"
 dependencies = [
+    "amqtt>=0.10.0",
     "colorlog>=6.9.0",
     "homeassistant>=2025.3.2",
     "loguru>=0.7.3",
@@ -40,4 +41,6 @@ max-complexity = 25
 pythonpath = [
   "."
 ]
+anyio_backend = "asyncio"
+
 
