--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "ruff>=0.9.10",
     "websocket-client>=1.8.0",
     "websockets>=15.0.1",
+    "paho-mqtt>=2.1.0",
 ]
 
 [dependency-groups]
