--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -1,6 +1,3 @@
-# https://www.home-assistant.io/integrations/default_config/
-default_config:
-
 # https://www.home-assistant.io/integrations/homeassistant/
 homeassistant:
   debug: true
@@ -10,3 +7,24 @@ logger:
   default: info
   logs:
     custom_components.elegoo_printer: debug
+
+assist_pipeline:
+backup:
+config:
+conversation:
+dhcp:
+energy:
+history:
+homeassistant_alerts:
+cloud:
+image_upload:
+logbook:
+media_source:
+mobile_app:
+my:
+ssdp:
+stream:
+sun:
+usb:
+webhook:
+zeroconf:
