--- a/custom_components/elegoo_printer/manifest.json
+++ b/custom_components/elegoo_printer/manifest.json
@@ -3,9 +3,9 @@
   "name": "Elegoo Printer",
   "codeowners": ["@danielcherubini"],
   "config_flow": true,
+  "dependencies": ["ffmpeg"],
   "documentation": "https://github.com/danielcherubini/elegoo-homeassistant",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/danielcherubini/elegoo-homeassistant/issues",
-  "version": "2.1.0b1",
-  "dependencies": ["ffmpeg"]
+  "version": "2.1.0b1"
 }
