--- a/.gitignore
+++ b/.gitignore
@@ -192,5 +192,7 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
+posts/
+
 # End of https://www.toptal.com/developers/gitignore/api/python
 posts
