--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,10 @@ keep-runtime-typing = true
 [tool.ruff.lint.mccabe]
 max-complexity = 25
 
+[tool.ruff.lint.per-file-ignores]
+"tests/*.py" = ["S101"]
+"custom_components/elegoo_printer/sdcp/tests/*.py" = ["S101"]
+
 [tool.pytest.ini_options]
 pythonpath = [
   "."
