--- a/blueprints/automation/elegoo_printer/elegoo_printer_progress.yaml
+++ b/blueprints/automation/elegoo_printer/elegoo_printer_progress.yaml
@@ -6,11 +6,12 @@ blueprint:
     min_version: 2024.6.0
   domain: automation
   input:
-    printer_device:
-      name: Elegoo Printer Device
-      description: The Elegoo printer device to monitor.
+    percent_complete_entity:
+      name: Percent Complete Entity
+      description: The percent complete sensor for the Elegoo printer (look for entities ending in '_percent_complete').
       selector:
-        device:
+        entity:
+          domain: sensor
           integration: elegoo_printer
     notify_device:
       name: Notification Device
@@ -46,37 +47,42 @@ mode: single
 max_exceeded: silent
 
 variables:
-  elegoo_printer_device: !input printer_device
+  percent_complete_entity: !input percent_complete_entity
   notify_device: !input notify_device
   percentage_divisor: !input percentage_divisor
   camera_entity_input: !input camera_entity
   dashboard_url: !input dashboard_url
+  # Get the device from the percent complete entity
+  printer_device: >-
+    {{ device_id(percent_complete_entity) }}
   notification_group: >-
-    {{ device_attr(elegoo_printer_device, 'name') | lower | replace(' ', '-') | replace('_', '-') }}
-  percent_complete_entity: >-
-    {{ device_entities(elegoo_printer_device) | select('search', '_percent_complete') |
-    first }}
+    {{ device_attr(printer_device, 'name') | lower | replace(' ', '-') | replace('_', '-') }}
+  # Get other entities from the same device
   remaining_print_time_entity: >-
-    {{ device_entities(elegoo_printer_device) | select('search', '_remaining_print_time') |
+    {{ device_entities(printer_device) | select('search', '_remaining_print_time') |
     first }}
   file_name_entity: >-
-    {{ device_entities(elegoo_printer_device) | select('search', '_file_name') |
+    {{ device_entities(printer_device) | select('search', '_file_name') |
     first }}
   current_status_entity: >-
-    {{ device_entities(elegoo_printer_device) | select('search', '_current_status') |
+    {{ device_entities(printer_device) | select('search', '_current_status') |
+    first }}
+  current_layer_entity: >-
+    {{ device_entities(printer_device) | select('search', '_current_layer') |
+    first }}
+  total_layers_entity: >-
+    {{ device_entities(printer_device) | select('search', '_total_layers') |
     first }}
   camera_entity: >-
     {{ camera_entity_input if camera_entity_input != '' else 
-       (device_entities(elegoo_printer_device) | select('match', 'camera\.') | first) }}
+       (device_entities(printer_device) | select('match', 'camera\.') | first) }}
   print_status_entity: >-
-    {{ device_entities(elegoo_printer_device) | select('search', '_print_status') |
+    {{ device_entities(printer_device) | select('search', '_print_status') |
     first }}
 
 trigger:
-  - platform: device
-    device_id: !input printer_device
-    domain: sensor
-    type: state_changed
+  - platform: state
+    entity_id: !input percent_complete_entity
 
 condition:
   - condition: template
@@ -93,22 +99,22 @@ action:
               {{ states(percent_complete_entity) | int % (percentage_divisor | int) == 0 }}
           - condition: template
             value_template: >-
-              {{ states(current_status_entity) == 'printing' }}
+              {{ current_status_entity != none and states(current_status_entity) == 'printing' }}
           - condition: template
             value_template: "{{ notify_device != '' }}"
         then:
           - device_id: !input notify_device
             domain: mobile_app
             type: notify
-            title: "Printing: {{ states(percent_complete_entity) }}%"
-            message: "{{ states(file_name_entity) }}"
+            title: "Printing: {{ states(percent_complete_entity) }}% - Layer {{ states(current_layer_entity) if current_layer_entity != none else '?' }}/{{ states(total_layers_entity) if total_layers_entity != none else '?' }}"
+            message: "{{ states(file_name_entity) if file_name_entity != none else 'Unknown file' }}"
             data:
               chronometer: true
-              when: "{{ (states(remaining_print_time_entity)|float(0) * 60)|int }}"
+              when: "{{ ((states(remaining_print_time_entity)|float(0) * 60)|int) if remaining_print_time_entity != none else 0 }}"
               when_relative: true
               progress: "{{ states(percent_complete_entity)|int }}"
               progress_max: 100
-              image: "/api/camera_proxy/{{ camera_entity }}"
+              image: "{{ '/api/camera_proxy/' ~ camera_entity if camera_entity != none and camera_entity != '' else '' }}"
               url: "{{ dashboard_url }}"
               clickAction: "{{ dashboard_url }}"
               group: "{{ notification_group }}"
@@ -121,7 +127,7 @@ action:
           - condition: template
             value_template: "{{ notify_device != '' }}"
           - condition: template
-            value_template: "{{ states(print_status_entity) == 'complete' }}"
+            value_template: "{{ print_status_entity != none and states(print_status_entity) == 'complete' }}"
         then:
           - device_id: !input notify_device
             domain: mobile_app
